# academytasks

./: .gitignore  LICENSE
cache_limitations/: CMakeLists.txt  README.md
cache_limitations/src/: main.cpp
plugins/: CMakeLists.txt  README.md
plugins/include/: plugin.hpp
plugins/plugins/bird/: CMakeLists.txt
plugins/plugins/bird/include/: bird.hpp
plugins/plugins/bird/src/: bird.cpp
plugins/plugins/dinosaur/: CMakeLists.txt
plugins/plugins/dinosaur/include/: dinosaur.hpp
plugins/plugins/dinosaur/src/: dinosaur.cpp
plugins/plugins/kangaroo/: CMakeLists.txt
plugins/plugins/kangaroo/include/: kangaroo.hpp
plugins/plugins/kangaroo/src/: kangaroo.cpp
plugins/src/: CMakeLists.txt  main.cpp
smart_pointers/: CMakeLists.txt  README.md
smart_pointers/include/: shared_ptr.hpp  unique_ptr.hpp
smart_pointers/src/: main.cpp  test2.cpp
