CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(cache_limitations VERSION 1.0 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 20)
ADD_COMPILE_OPTIONS(                  
        /W4
)

# Using standard-only C++ features
IF(NOT CMAKE_CXX_EXTENSIONS)
    SET(CMAKE_CXX_EXTENSIONS OFF)
ENDIF()

SET(EXECUTABLE_SOURCES src/main.cpp)
ADD_EXECUTABLE(cache_limitations ${EXECUTABLE_SOURCES})
SET_TARGET_PROPERTIES(cache_limitations
    PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)