CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(plugins VERSION 1.0 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 17)
ADD_COMPILE_OPTIONS(                  
        /W4
)

# Using standard-only C++ features
IF(NOT CMAKE_CXX_EXTENSIONS)
    SET(CMAKE_CXX_EXTENSIONS OFF)
ENDIF()

# SET(CMAKE_BINARY_DIR "${PROJECT_SOURCE_DIR}/build")
# SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
# SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
# SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)


ADD_SUBDIRECTORY(plugins/bird)
ADD_SUBDIRECTORY(plugins/dinosaur)
ADD_SUBDIRECTORY(plugins/kangaroo)
ADD_SUBDIRECTORY(src)