SET(SOURCE_LIB src/bird.cpp)
ADD_LIBRARY(bird SHARED ${SOURCE_LIB})
TARGET_INCLUDE_DIRECTORIES(bird  
    PUBLIC "${PROJECT_SOURCE_DIR}/include"           # ABSTRACT CLASS INTERFACE 
    PUBLIC "${CMAKE_CURRENT_LIST_DIR}/include"       # OWN LIBRARY INTERFACE
)

SET_TARGET_PROPERTIES(bird
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)
